# good-image-terminal

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.py  pyproject.toml  test-Julien.txt  test_file.py
.github/workflows/: build.yaml  deploy-docs.yaml  deploy.yaml
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  code-jam-12.md  color_formats.md  commands.md  contribution.md  features.md  index.html  installation.md
docs/code-jam-12/: README.md  _sidebar.md
public/: app.html  imagetesting.html  index.html
public/templates/: app_template.html  apptemplate.html
src/: hello.py  image.py  main.py  terminal.py
src/Utils/: color.py
src/commands/: __init__.py  background.py  base_command.py  draw_circle.py  draw_line.py  draw_pixel.py  draw_polygon.py  draw_rectangle.py  foreground.py  help.py  image_info.py  load_image.py  ls.py  ping.py  save_image.py  terminal_background.py  undo.py
src/console/: console.py
src/console/commands/: base_command.py
src/gui/: __init__.py  element.py  event.py  layout.py
src/gui/components/: __init__.py  description.py  drag_drop_handler.py  file_upload_handler.py  image_display_manager.py  image_preview.py  separator.py  terminal_gui.py  terminal_input.py  terminal_io.py
src/utils/: color.py
